[gd_scene load_steps=9 format=3 uid="uid://cwh1c1078d3dt"]

[ext_resource type="Script" uid="uid://c3q0bdp5vmacm" path="res://scripts/dice.gd" id="1_f8si1"]
[ext_resource type="Texture2D" uid="uid://dhivd8e5yqrsr" path="res://assets/dice/Property 1=gameDie1.png" id="2_pb8pk"]
[ext_resource type="Texture2D" uid="uid://jxusl0tsc5q" path="res://assets/dice/Property 1=gameDie2.png" id="3_ocjtb"]
[ext_resource type="Texture2D" uid="uid://b0fu2re65j04t" path="res://assets/dice/Property 1=gameDie3.png" id="4_dicg2"]
[ext_resource type="Texture2D" uid="uid://lsym3128c1xu" path="res://assets/dice/Property 1=gameDie4.png" id="5_pgf55"]
[ext_resource type="Texture2D" uid="uid://80aahurlirb" path="res://assets/dice/Property 1=gameDie5.png" id="6_dlvbc"]
[ext_resource type="Texture2D" uid="uid://c518ehf8ljt32" path="res://assets/dice/Property 1=gameDie6.png" id="7_skxya"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gde5k"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pb8pk")
}, {
"duration": 1.0,
"texture": ExtResource("3_ocjtb")
}, {
"duration": 1.0,
"texture": ExtResource("4_dicg2")
}, {
"duration": 1.0,
"texture": ExtResource("5_pgf55")
}, {
"duration": 1.0,
"texture": ExtResource("6_dlvbc")
}, {
"duration": 1.0,
"texture": ExtResource("7_skxya")
}],
"loop": true,
"name": &"roll",
"speed": 5.0
}]

[node name="Dice" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 194.0
offset_top = 181.0
offset_right = 564.0
offset_bottom = 381.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_f8si1")
metadata/_edit_group_ = true

[node name="DiceSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(73.6363, 89.2046)
rotation = -0.0628319
scale = Vector2(2.80448, 2.68492)
sprite_frames = SubResource("SpriteFrames_gde5k")
animation = &"roll"

[node name="DiceSprite2" type="AnimatedSprite2D" parent="."]
position = Vector2(250, 84)
rotation = -0.0628319
scale = Vector2(2.804, 2.607)
sprite_frames = SubResource("SpriteFrames_gde5k")
animation = &"roll"

[node name="RollTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
